--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,5 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+
     - name: Build the Docker image
-      run: mkdir my yagnesh
+      run: docker build -t yagnesh.jariwala.com:30002/inventyv/production .
+    - name: Push the Docker image
+      run: docker push yagnesh.jariwala.com:30002/inventyv/production
+
