--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: docker build -t yagnesh.jariwala.com:30002/inventyv/production .
+    - name: Log in to Docker Hub
+      run: gecho "${{ secrets.DOCKER_PASSWORD }}" | docker login yagnesh.jariwala.com:30002 -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
     - name: Push the Docker image
       run: docker push yagnesh.jariwala.com:30002/inventyv/production
 
