--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,14 @@ jobs:
     - uses: actions/checkout@v4
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login yagnesh.jariwala.com:30002 -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-    
+
+      
+
+
+    - name: Remove the old image
+      run: docker rmi yagnesh.jariwala.com:30002/inventyv/production:latest
+
+
     - name: Build the Docker image
       run: docker build -t yagnesh.jariwala.com:30002/inventyv/production:latest .
       
