--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set Version Tag
-        id: version
+        id: versionk
         run: |
           if [ -z "${{ github.event.inputs.version }}" ]; then
             VERSION=$(date +'%Y%m%d')-${{ github.run_number }}
