--- a/kubernetes/pod-deployment.yaml
+++ b/kubernetes/pod-deployment.yaml
@@ -1,21 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    type: mydeploy
-  name: mydeploy
-  namespace: test
+  name: production
+  namespace: default
+
+
 spec:
   replicas: 1
   selector:
     matchLabels:
-      type: run1
+      app: example
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
   template:
     metadata:
       labels:
-        type: run1
-      name: myrcpod
+        app: example
+
+
     spec:
       containers:
-        - image: nginx
-          name: myrccontainers
+      - name: poding
+        image: yagnesh.jariwala.com:30002/inventyv/production:${trigger.parameters.version}
+        imagePullPolicy: Always
