--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,13 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_ENV
           echo "Loaded Version: $VERSION"
 
+      - name: Check if Version Already Exists
+        run: |
+          if docker manifest inspect yagnesh.jariwala.com:30002/inventyv/production:v${{ env.VERSION }} > /dev/null 2>&1; then
+            echo "Error: Image version v${{ env.VERSION }} already exists in the registry."
+            exit 1
+          fi
+
       - name: Log in to Docker Registry
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login yagnesh.jariwala.com:30002 -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
