--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_CONN_STRING=mongodb://3.3.3.100:30154
+MONGO_CONN_STRING=mongodb://localhost:27017
 MONGO_DB_NAME=project
 MONGO_COLLECTION_NAME=todo
 PORT=3000
