added test generated

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,6 +31,17 @@ jobs:
             exit 1
           fi
 
+      - name: Test Docker Image Generated
+        run: |
+          docker image rm cicd-test || echo "No image to remove"
+          docker build -t cicd-test -f Dockerfile.test .
+          docker container run --name cicd-test cicd-test
+          if -n docker wait cicd-test ; then
+            echo "Test Passed"
+          else
+            echo "Test Failed"
+            exit 1
+          fi
 
       - name: Log in to Docker Registry
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login yagnesh.jariwala.com:30002 -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -52,7 +63,10 @@ jobs:
         run: |
           docker push yagnesh.jariwala.com:30002/inventyv/production:latest
           docker push yagnesh.jariwala.com:30002/inventyv/production:v${{ env.VERSION }}
-
+      - name: cleanup
+        run: |
+          docker image rm -f yagnesh.jariwala.com:30002/inventyv/production:latest
+          docker image rm -f yagnesh.jariwala.com:30002/inventyv/production:v${{ env.VERSION }}
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v1
         with:
