added rm container before test Upgraded version 1.0.7 2

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,7 +43,8 @@ jobs:
           docker rm cicd-test || echo "No container to remove"
           docker build -t cicd-test -f Dockerfile.test .
           docker container run --name cicd-test cicd-test
-          if docker wait cicd-test -eq 0 ; then
+          docker wait cicd-test
+          if [ $? -eq 0 ]; then
             echo "Test Passed"
           else
             echo "Test Failed"
