--- a/kubernetes/statefulsets.yaml
+++ b/kubernetes/statefulsets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: test
+  name: database
 ---
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
@@ -78,7 +78,7 @@ spec:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  namespace: test
+  namespace: database
   name: mongo-server
 spec:
   selector:
@@ -113,11 +113,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: test
+  namespace: database
   name: mongo-service
 spec:
   selector:
-    app: mongo-server
+    statefulset.kubernetes.io/pod-name: mongo-server-0
   ports:
     - protocol: TCP
       port: 27017
