--- a/kubernetes/prod-test-job.yaml
+++ b/kubernetes/prod-test-job.yaml
@@ -46,6 +46,17 @@ spec:
                       sleep 5
                   fi
               done
+
+              # Check if the service is running on the specified port
+              echo "Checking if service is running on my-production-svc-test.deploy-test.svc.cluster.local:31112..."
+              curl my-production-svc-test.deploy-test.svc.cluster.local:31112
+              if [ $? -eq 0 ]; then
+                  echo "Service is running on port 31112"
+              else
+                  echo "Error: Service is not running on port 31112"
+                  exit 1
+              fi
+
               exit 0
           command:
             - bash
@@ -55,6 +66,7 @@ spec:
           volumeMounts:
             - mountPath: /.kube
               name: kubectl-config
+        - name: checkurl
       restartPolicy: Never
       volumes:
         - hostPath:
