Triggering CI on creating new tag

--- a/.github/workflows/Build-Deployment.yml
+++ b/.github/workflows/Build-Deployment.yml
@@ -2,7 +2,9 @@ name: Docker Image Build and Deployment
 
 on:
   push:
-    branches: ["main"]
+    tags:
+        - '*'
+
   workflow_dispatch:
     inputs:
       version:
@@ -30,24 +32,24 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Determine Version from Commit Message
-        id: determine_version
-        run: |
-          if [ "${{ github.event.inputs.version }}" ]; then
-            VERSION=${{ github.event.inputs.version }}
-            echo "Using input version: $VERSION"
-          else
-            # Extract the latest commit message
-            COMMIT_MESSAGE=$(git log -1 --pretty=%B | tr -d '\n')
-            # Extract the first word as the version
-            VERSION=$(echo "$COMMIT_MESSAGE" | awk '{print $1}')
-            # Extract the rest of the commit message
-            MESSAGE=$(echo "$COMMIT_MESSAGE" | cut -d' ' -f2-)
-            echo "Using version from commit message: $VERSION"
-            echo "Commit message: $MESSAGE"
-          fi
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
-          echo "MESSAGE=$MESSAGE" >> $GITHUB_ENV
+      # - name: Determine Version from Commit Message
+      #   id: determine_version
+      #   run: |
+      #     if [ "${{ github.event.inputs.version }}" ]; then
+      #       VERSION=${{ github.event.inputs.version }}
+      #       echo "Using input version: $VERSION"
+      #     else
+      #       # Extract the latest commit message
+      #       COMMIT_MESSAGE=$(git log -1 --pretty=%B | tr -d '\n')
+      #       # Extract the first word as the version
+      #       VERSION=$(echo "$COMMIT_MESSAGE" | awk '{print $1}')
+      #       # Extract the rest of the commit message
+      #       MESSAGE=$(echo "$COMMIT_MESSAGE" | cut -d' ' -f2-)
+      #       echo "Using version from commit message: $VERSION"
+      #       echo "Commit message: $MESSAGE"
+      #     fi
+      #     echo "VERSION=$VERSION" >> $GITHUB_ENV
+      #     echo "MESSAGE=$MESSAGE" >> $GITHUB_ENV
 
       - name: Check if Version Already Exists
         run: |
