--- a/.github/workflows/Build-Deployment.yml
+++ b/.github/workflows/Build-Deployment.yml
@@ -19,6 +19,7 @@ env:
   MONGO_DB_NAME: ${{ secrets.MONGO_DB_NAME }}
   MONGO_COLLECTION_NAME: ${{ secrets.MONGO_COLLECTION_NAME }}
   PORT: ${{ secrets.PORT }}
+  SECRET_KEY: ${{ secrets.SECRET_KEY }}
 
 jobs:
   build:
@@ -58,6 +59,7 @@ jobs:
             -e MONGO_COLLECTION_NAME=${{ env.MONGO_COLLECTION_NAME }} \
             -e PORT=${{ env.PORT }} \
             -e VERSION=${{ env.VERSION }} \
+            -e SECRET_KEY=${{ env.SECRET_KEY }} \
             cicd-test
           docker wait cicd-test
           if [ $? -eq 0 ]; then
