--- a/.github/workflows/Build-Deployment.yml
+++ b/.github/workflows/Build-Deployment.yml
@@ -8,10 +8,10 @@ on:
   workflow_dispatch:
 
 env:
-  DOCKER_REGISTRY: yagnesh.com:30002
-  DOCKER_IMAGE_NAME: inventyv/production
-  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  HARBOR_REGISTRY: yagnesh.com:30002
+  HARBOR_IMAGE_NAME: inventyv/production
+  HARBOR_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+  HARBOR_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
   GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   PUBSUB_TOPIC: ${{ secrets.PUBSUB_TOPIC }}
   PUBSUB_CREDENTIALS: ${{ secrets.PUB_SUB_PUBLISHER }}
@@ -24,31 +24,24 @@ env:
 jobs:
   build:
     runs-on: self-hosted
+    
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-
-
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-      - name: Test
+      - name: Get Release Version
         run: |
-          echo $RELEASE_VERSION
-          echo ${{ env.RELEASE_VERSION }}
-
-      - name: Use the latest tag
-        run: |
+          echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
           LATEST_VERSION_TAG=${{ env.RELEASE_VERSION }}
           echo "Latest tag is $LATEST_VERSION_TAG"
 
       - name: Check if Version Already Exists
         run: |
-          if command docker pull ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:$LATEST_TAG ; then
+          if command docker pull ${{ env.HARBOR_REGISTRY }}/${{ env.HARBOR_IMAGE_NAME }}:$LATEST_TAG ; then
             echo "Error: Image version ${{ env.RELEASE_VERSION }} already exists in the registry."
             exit 1
           fi
 
-      - name: Test Docker Image Generated
+      - name: Test Docker Image Generated and Run Tests
         run: |
           docker image rm cicd-test || echo "No image to remove"
           docker rm cicd-test || echo "No container to remove"
@@ -70,30 +63,30 @@ jobs:
           fi
 
       - name: Log in to Docker Registry
-        run: echo "${{ env.DOCKER_PASSWORD }}" | docker login ${{ env.DOCKER_REGISTRY }} -u "${{ env.DOCKER_USERNAME }}" --password-stdin
+        run: echo "${{ env.HARBOR_PASSWORD }}" | docker login ${{ env.HARBOR_REGISTRY }} -u "${{ env.HARBOR_USERNAME }}" --password-stdin
 
       - name: Pull Old Image (if exists)
         continue-on-error: true
-        run: docker pull ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:latest || echo "No existing image found"
+        run: docker pull ${{ env.HARBOR_REGISTRY }}/${{ env.HARBOR_IMAGE_NAME }}:latest || echo "No existing image found"
 
       - name: Remove Old Image (if exists)
         continue-on-error: true
-        run: docker rmi ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:latest || echo "No old image to remove"
+        run: docker rmi ${{ env.HARBOR_REGISTRY }}/${{ env.HARBOR_IMAGE_NAME }}:latest || echo "No old image to remove"
 
       - name: Build the Docker Image
         run: |
-          docker build -t ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:latest .
-          docker tag ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:latest ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ env.RELEASE_VERSION }}
+          docker build -t ${{ env.HARBOR_REGISTRY }}/${{ env.HARBOR_IMAGE_NAME }}:latest .
+          docker tag ${{ env.HARBOR_REGISTRY }}/${{ env.HARBOR_IMAGE_NAME }}:latest ${{ env.HARBOR_REGISTRY }}/${{ env.HARBOR_IMAGE_NAME }}:${{ env.RELEASE_VERSION }}
 
       - name: Push Docker Image
         run: |
-          docker push ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:latest
-          docker push ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ env.RELEASE_VERSION }}
+          docker push ${{ env.HARBOR_REGISTRY }}/${{ env.HARBOR_IMAGE_NAME }}:latest
+          docker push ${{ env.HARBOR_REGISTRY }}/${{ env.HARBOR_IMAGE_NAME }}:${{ env.RELEASE_VERSION }}
 
       - name: Cleanup
         run: |
-          docker image rm -f ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:latest
-          docker image rm -f ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ env.RELEASE_VERSION }}
+          docker image rm -f ${{ env.HARBOR_REGISTRY }}/${{ env.HARBOR_IMAGE_NAME }}:latest
+          docker image rm -f ${{ env.HARBOR_REGISTRY }}/${{ env.HARBOR_IMAGE_NAME }}:${{ env.RELEASE_VERSION }}
 
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v1
