--- a/.github/workflows/Build-Deployment-Harsh.yml
+++ b/.github/workflows/Build-Deployment-Harsh.yml
@@ -33,13 +33,14 @@ jobs:
         uses: actions/checkout@v4
       - name: Get Release Version
         run: |
+          echo ${GITHUB_REF#refs/*} >> $GITHUB_ENV
           echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
           LATEST_VERSION_TAG=${{ env.RELEASE_VERSION }}
           echo "Latest tag is $LATEST_VERSION_TAG"
 
       - name: Check if Version Already Exists
         run: |
-          if command docker pull ${{ env.HARBOR_REGISTRY }}/${{ env.HARBOR_IMAGE_NAME }}:$LATEST_TAG ; then
+          if command docker pull ${{ env.HARBOR_REGISTRY }}/${{ env.HARBOR_IMAGE_NAME }}:$LATEST_VERSION_TAG ; then
             echo "Error: Image version ${{ env.RELEASE_VERSION }} already exists in the registry."
             exit 1
           fi
