--- a/.github/workflows/Build-Deployment.yml
+++ b/.github/workflows/Build-Deployment.yml
@@ -1,9 +1,9 @@
 name: Docker Image Build and Deployment
 
 on:
-  # push:
-  #   tags:
-  #       - 'v*.*.*'
+  push:
+    tags:
+        - 'v*.*.*'
 
   workflow_dispatch:
 
@@ -25,7 +25,7 @@ env:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: yagnesh-runner
 
     steps:
       - name: Checkout Repository
