--- a/.github/workflows/Build-Deployment.yml
+++ b/.github/workflows/Build-Deployment.yml
@@ -1,9 +1,9 @@
 name: Docker Image Build and Deployment
 
 on:
-  push:
-    tags:
-        - 'v*.*.*'
+  # push:
+  #   tags:
+  #       - 'v*.*.*'
 
   workflow_dispatch:
 
@@ -16,7 +16,7 @@ env:
   GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   PUBSUB_TOPIC: ${{ secrets.PUBSUB_TOPIC }}
   PUBSUB_CREDENTIALS: ${{ secrets.PUB_SUB_PUBLISHER }}
-  
+
   MONGO_CONN_STRING: ${{ secrets.MONGO_CONN_STRING }}
   MONGO_DB_NAME: ${{ secrets.MONGO_DB_NAME }}
   MONGO_COLLECTION_NAME: ${{ secrets.MONGO_COLLECTION_NAME }}
