--- a/.github/workflows/Build-Deployment-Harsh.yml
+++ b/.github/workflows/Build-Deployment-Harsh.yml
@@ -26,7 +26,7 @@ env:
 
 jobs:
   build:
-    runs-on: harsh-runner
+    runs-on: yagnesh-runner
 
     steps:
       - name: Checkout Repository
@@ -43,11 +43,11 @@ jobs:
             echo "Error: Image version ${{ env.RELEASE_VERSION }} already exists in the registry."
             exit 1
           fi
-      - name: check pubsub Repository
-        run: |
-          echo "GCP_PROJECT_ID=${{ secrets.HARSH_GCP_PROJECT_ID }}" >> /x
-          echo "PUBSUB_TOPIC=${{ secrets.HARSH_PUBSUB_TOPIC }}" >> /x
-          echo "PUBSUB_CREDENTIALS=${{ secrets.HARSH_PUBSUB_CRED }}" >> /x
+      # - name: check pubsub Repository
+      #   run: |
+      #     echo "GCP_PROJECT_ID=${{ secrets.HARSH_GCP_PROJECT_ID }}" >> /x
+      #     echo "PUBSUB_TOPIC=${{ secrets.HARSH_PUBSUB_TOPIC }}" >> /x
+      #     echo "PUBSUB_CREDENTIALS=${{ secrets.HARSH_PUBSUB_CRED }}" >> /x
 
 
       - name: Test Docker Image Generated and Run Tests
