tag based runner

--- a/.github/workflows/Build-Deployment-Harsh.yml
+++ b/.github/workflows/Build-Deployment-Harsh.yml
@@ -2,8 +2,8 @@ name: Docker Image Build and Deployment - Harsh
 
 on:
   push:
-    # tags:
-    #     - 'v*.*.*'
+    tags:
+        - 'v*.*.*'
 
   workflow_dispatch:
 
