--- a/.github/workflows/Build-Deployment-Harsh.yml
+++ b/.github/workflows/Build-Deployment-Harsh.yml
@@ -1,9 +1,9 @@
 name: Docker Image Build and Deployment - Harsh
 
 on:
-  # push:
-  #   tags:
-  #       - 'v*.*.*'
+  push:
+    tags:
+        - 'hv*.*.*'
 
   workflow_dispatch:
 
