--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,7 +1,7 @@
-FROM python:3.9-slim
+FROM python:3.9-slim-buster
 WORKDIR /app
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 EXPOSE 3001
 CMD ["pytest", "test_app.py"]
