--- a/.env.Templete
+++ b/.env.Templete
@@ -2,3 +2,4 @@ MONGO_CONN_STRING=<example - mongodb://3.3.3.100:30017>
 MONGO_DB_NAME=<example - project>
 MONGO_COLLECTION_NAME=<example - todo>
 PORT=<example - 5000>
+SECRET_KEY=
