--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ $RECYCLE.BIN/
 .env
 # Windows shortcuts
 *.lnk
-
+.vscode
 # =========================
 # Operating System Files
 # =========================
