--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 Thumbs.db
 ehthumbs.db
 ehthumbs_vista.db
-
 # Folder config file
 Desktop.ini
 tempCodeRunnerFile.py
@@ -17,7 +16,7 @@ $RECYCLE.BIN/
 .env
 # Windows shortcuts
 *.lnk
-
+.vscode
 # =========================
 # Operating System Files
 # =========================
